# mcp-openapi-proxy

./: .devcontainer.json  .pre-commit-config.yaml  .spellcheck.yml  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/: .wordlist.txt
.github/workflows/: build.yml  linter.yml  spell.yml  update.yml
src/mcp_proxy/: __init__.py  mcp.py  parser.py
tests/: client.py  test_parser.py
tests/data/: summary.json
