[project]
name = "mcp-openapi-proxy"
version = "0.0.1"
description = "MCP generator using Open API specification"
dependencies = [
    "mcp[cli]",
    "requests",
    "asyncclick",
    "click",
    "openapi3-parser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-proxy = "mcp_proxy:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proxy"]

[tool.isort]
profile = "black"
