[project]
name = "mcp-openapi-proxy"
version = "0.0.1"
description = "MCP generator using Open API specification"
dependencies = [
    "mcp[cli]",
    "requests",
    "asyncclick",
    "click",
    "openapi3-parser",
    "uvloop",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-proxy = "mcp_proxy:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proxy"]

[tool.isort]
profile = "black"

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
tests = [
    "pytest",
]
spell = [
    "pyspelling",
]
fmt = [
    "black",
    "isort",
    "pyink",
    "ruff",
]

[tool.tox]
env_list = ["3.12"]

[tool.tox.env_run_base]
description = "Run unit test under {base_python}"
dependency_groups = [
    "tests",
]
commands = [
    [
        "pytest",
        "tests/",
    ]
]

[tool.tox.env.spell]
description = "Check spelling in the codebase"
dependency_groups = [
    "spell",
]
commands = [
    [
        "pyspelling",
        "-c",
        ".spellcheck.yml",
    ],
]

[tool.tox.env.fmt]
description = "Format the codebase"
dependency_groups = [
    "fmt",
]
commands = [
    [
        "black",
        ".",
    ],
    [
        "isort",
        ".",
    ],
    [
        "pyink",
        ".",
    ],
    [
        "ruff",
        "format",
    ],
]
